# AutoBiz-AI

./: README.md  jest.config.js  jest.config.ts  package.json  tsconfig.jest.json
docs/: context.md
scripts/: build-wasm.ts
src/: App.tsx  GlobalStyle.ts  setupTests.ts  theme.ts
src/agents/base/: BaseAgent.ts  types.ts
src/agents/document/: DocumentProcessingAgent.ts  ExtractionAgent.ts  SummarizationAgent.ts  extraction-types.ts  types.ts
src/components/ui/: ErrorBoundary.tsx
src/components/workflow/: WorkflowDiagram.module.css  WorkflowDiagramComponent.tsx
src/core/agents/: types.ts
src/core/document/: DocumentProcessor.ts  types.ts
src/core/drive/: types.ts
src/core/messaging/: MessageRouter.ts  PriorityMessageQueue.ts  types.ts
src/core/ml/: Model.ts  types.ts
src/core/state/: InMemoryStateStore.ts  StatePersistence.ts
src/core/storage/: IndexedDBService.ts  MonitoringStorageService.ts
src/core/system/: ResourceMonitor.ts
src/core/task/: TaskExecutor.ts  (+5 more)
src/core/wasm/modules/ml-inference/rust/: Cargo.toml
src/core/wasm/modules/ml-inference/rust/src/: lib.rs  preprocessing.rs  tests.rs
src/core/wasm/modules/text-processing/rust/: Cargo.toml  build.rs  wasm-pack.toml
src/core/wasm/modules/text-processing/rust/src/: lib.rs  tests.rs
src/hooks/: useMonitoringService.ts
src/test/: jest.setup.ts  setup.ts
src/types/: events.d.ts  global.d.ts  jest-globals.d.ts  jest.d.ts  node.d.ts
src/utils/: format.ts  logger.ts
wasm/document-processor/: Cargo.toml
wasm/document-processor/src/: docx.rs  image.rs  lib.rs  pdf.rs  pdf_test.rs
(+240 files in other folders)
