[package]
name = "document-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
chrono = { version = "0.4", features = ["serde"] }
pdf = { version = "0.8", features = ["image"] }
docx = { version = "1.1", features = ["metadata"] }
image = { version = "0.24", features = ["png", "jpeg", "gif", "webp"] }
lopdf = "0.27"
zip = "0.6"
imageproc = "0.23"
rusttype = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 