[package]
name = "ml-inference"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
ndarray = "0.15"
tract-core = "0.19"
tract-onnx = "0.19"
tract-tensorflow = "0.19"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.7" 