[package]
name = "text-processing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
unicode-segmentation = "1.10"
unicode-normalization = "0.1"
regex = "1.9"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5" 